<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GC" Id="{fd69563d-84d2-02e1-2244-b5fb69e7506b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
//Movers-PLC
	nNumMinMovers					: UDINT :=1;
	nNumMaxMovers 					: UDINT :=2; //See General (Persistent, non-constant)

//Movers-MC
	nNumMinMCAxes					: UDINT	:=1;
	nNumMaxMCAxes					: UDINT	:=20;

//Tracks
	nNumMinTracks 					: UDINT :=1; // Do not change - per NC
	nNumMaxTracks 					: UDINT :=3; // Do not change - per NC
	
//Sectors
	MIN_SECTOR_CT					: USINT	:= 1;
	//Make MIN same as first entry
	MAG_TRIG_SECTOR_OPART_END		: USINT := 1;
	MAG_ON_SECTOR_OPART				: USINT	:= 2;
	SHORTCUT_DIVERT_SECTOR_IPART	: USINT := 3;
	SHORTCUT_ENTRY_SECTOR_IPART 	: USINT := 4;
	SHORTCUT_ENTRY_HALF_IPART		: USINT := 5;
	SHORTCUT_MAIN_SECTOR_IPART 		: USINT := 6;
	LOAD_STOP_SECTOR_IPART			: USINT := 7;
	SHORTCUT_EXIT_HALF_IPART		: USINT := 8;
	SHORTCUT_EXIT_SECTOR_IPART 		: USINT := 9;
	MERGE_SECTOR_TO_FINISH 			: USINT := 10;
	NO_DIVERT_POST_MAG				: USINT := 11;
	//Make MAX same as last entry
	MAX_SECTOR_CT					: USINT	:= 11;
	
// Global Position Constants
	SHUTTLE_LENGTH						: LREAL := 600; //mm
	SHUTTLE_LENGTH_PADDED				: LREAL := 900; //mm
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>