<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_ExpandedMover" Id="{8d5ed951-fbb1-003d-3542-110cb93ddd55}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ExpandedMover
VAR_INPUT
	MoverRef		: REFERENCE TO FB_PlanarXtsMover;
END_VAR
VAR
	eExpMoverConfig		: RingBuffer.E_ExpMover;
	stExpMoverStatus		: ST_ExpMoverStatus;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_M_UpdatePositions();]]></ST>
    </Implementation>
    <Method Name="_M_UpdatePositions" Id="{5b6a388a-1a04-02ed-024b-cd6b9a534ebd}">
      <Declaration><![CDATA[METHOD PROTECTED _M_UpdatePositions]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF ADR(MoverRef) <> 0 THEN
	stExpMoverStatus.XtsRefData 							 REF= MoverRef.P_XtsPositionInfo;
	IF eExpMoverConfig = RingBuffer.E_ExpMover.Head THEN
		stExpMoverStatus.TrackSectorBndryHeadF 		:= stExpMoverStatus.XTSRefData.fTrackPosition + stTrackGlobalConfig.ExpMoverLength + GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.TrackSectorCenterHead 		:= stExpMoverStatus.XTSRefData.fTrackPosition + stTrackGlobalConfig.ExpMoverLength/2 + GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.TrackSectorBndryHeadR 		:= stExpMoverStatus.XTSRefData.fTrackPosition + GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.PartSectorBndryHeadF 		:= stExpMoverStatus.XTSRefData.fPartPosition + stTrackGlobalConfig.ExpMoverLength + GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.PartSectorCenterHead 		:= stExpMoverStatus.XTSRefData.fPartPosition + stTrackGlobalConfig.ExpMoverLength/2 + GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.PartSectorBndryHeadR 		:= stExpMoverStatus.XTSRefData.fPartPosition + GC.SHUTTLE_LENGTH/2;
	ELSIF eExpMoverConfig = RingBuffer.E_ExpMover.Tail THEN
		stExpMoverStatus.TrackSectorBndryTailF		:= stExpMoverStatus.XTSRefData.fTrackPosition - GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.TrackSectorCenterTail		:= stExpMoverStatus.XTSRefData.fTrackPosition - stTrackGlobalConfig.ExpMoverLength/2 - GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.TrackSectorBndryTailR		:= stExpMoverStatus.XTSRefData.fTrackPosition - stTrackGlobalConfig.ExpMoverLength - GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.PartSectorBndryTailF			:= stExpMoverStatus.XTSRefData.fPartPosition - GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.PartSectorCenterTail			:= stExpMoverStatus.XTSRefData.fPartPosition - stTrackGlobalConfig.ExpMoverLength/2 - GC.SHUTTLE_LENGTH/2;
		stExpMoverStatus.PartSectorBndryTailR			:= stExpMoverStatus.XTSRefData.fPartPosition - stTrackGlobalConfig.ExpMoverLength - GC.SHUTTLE_LENGTH/2;
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_ExpMoverConfig" Id="{c0725f29-9d1f-06a4-2082-37da9e21d02a}">
      <Declaration><![CDATA[PROPERTY P_ExpMoverConfig : REFERENCE TO RingBuffer.E_ExpMover]]></Declaration>
      <Get Name="Get" Id="{1639b134-c26b-063d-11f3-a7cd1be13c72}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_ExpMoverConfig REF= eExpMoverConfig;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_ExpMoverStatus" Id="{23770526-a57b-0779-2341-38528fb65358}">
      <Declaration><![CDATA[PROPERTY P_ExpMoverStatus : REFERENCE TO ST_ExpMoverStatus]]></Declaration>
      <Get Name="Get" Id="{0873d419-8a66-07f8-0d4d-4521e7e958d7}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_ExpMoverStatus REF= stExpMoverStatus;]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>